# FConnch

./: .gitignore  LICENSE.md  README.md  fconnch.py  requirements.txt  setup.cfg
.github/workflows/: lint_python.yml
fconnch/: __init__.py  __main__.py  checker.py  cli.py  fconnch.py
