[metadata]
name = fconnch
version = attr: fconnch.__version__
description = A Fast Bulk Subdomain Availability Checker 
long_description = file: README.md, LICENSE.md
keywords = Subdomain, Availability
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiohttp==3.8.1
    aiosignal==1.2.0
    async-timeout==4.0.2
    attrs==21.4.0
    charset-normalizer==2.1.0
    frozenlist==1.3.0
    idna==3.3
    multidict==6.0.2
    setuptools==63.1.0 
    yarl==1.7.2

[options.entry_points]
console_scripts =
    fconnch = fconnch.__main__:main
