[metadata]
name = fconnch
version = attr: fconnch.__init__.__version__
description = A Fast Bulk Subdomain Availability Checker 
long_description = file: README.md, LICENSE.md
keywords = Subdomain, Availability
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    fconnch = fconnch.__main__:main
